2003-04-09  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/.cvsignore:
	* snp/.cvsignore: Ignore Makefile*

2003-04-09  Angus Leeming  <angus.leeming@btopenworld.com>

	Move tabfolder-specific code out of forms.c and allow individual
	FL_OBJECTs to respond to such events. Means that the library
	becomes extensible to new, user-defined widgets once again.

	* lib/include/Basic.h: add FL_MOVEORIGIN to the FL_EVENTS enum.

	* lib/forms.h:
	* lib/include/forms.h: regenerated automatically.

	* lib/forms.c (fl_handle_form): no longer a static function.
	Dispatch FL_MOVEORIGIN events to the form's constituent objects.
	(fl_get_tabfolder_origin): removed. Functionality moved into
	tabfolder.c.
	(do_interaction_step): no longer call fl_get_tabfolder_origin. Instead,
	dispatch a call to fl_handle_form(form, FL_MOVEORIGIN, ...).

	* lib/tabfolder.c (handle): add FL_MOVEORIGIN to the event switch.
	Update the x,y absolute coords of the active_folder and dispatch
	a call to fl_handle_form(active_folder, FL_MOVEORIGIN, ...) to
	ensure that the x,y absolute coords of nested tabfolders are also
	updated.

2003-04-09  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* image/Imakefile (EXTRA_INCLUDES): change the order of includes,
	to avoid that an older installed forms.h is used instead of the
	fresh one

2003-04-09  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/objects.c (hide_tooltip): renamed as checked_hide_tooltip.
	(unconditional_hide_tooltip): new static helper function,
	invoked within fl_handle_it on FL_KEYPRESS and FL_PUSH events.

	* lib/include/AAA.h: up-ed FL_FIXLEVEL to 1 to reflect the changes
	made above.
	* lib/forms.h: regenerated to reflect changed FL_FIXLEVEL.

	* version.c (version): update to reflect this also.

2003-04-08  Angus Leeming  <angus.leeming@btopenworld.com>

	Enable tooltips to be shown correctly in "composite" widgets
	such as the browser.

	* lib/objects.c (get_parent): new static helper function. Given an